# cpp20_4_hello

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: main.cpp
include/greeter/: greeter.hpp
src/: greeter.cpp
